3856.	[bug]		Configuring libjson without also configuring libxml
			resulted in a REQUIRE assertion when retrieving
			statistics using json. [RT #36009]

3855.	[bug]		Limit smoothed round trip time aging to no more than
			once a second. [RT #32909]

3854.	[cleanup]	Report unrecognized options, if any, in the final
			configure summary. [RT #36014]

3853.	[cleanup]	Refactor dns_rdataslab_fromrdataset to seperate out
			the handling of a rdataset with no records. [RT #35968]

3852.	[func]		Increase the default number of clients available
			for servicing lightweight resolver queries, and
			make them configurable via the "lwres-tasks" and
			"lwres-clients" options.  (Thanks to Tomas Hozza.)
			[RT #35857]

3851.	[func]		Allow libseccomp based system-call filtering
			on Linux; use "configure --enable-seccomp" to
			turn it on.  Thanks to Loganaden Velvindron
			of AFRINIC for the contribution. [RT #35347]

3850.	[bug]		Disabling forwarding could trigger a REQUIRE assertion.
			[RT #35979]

3849.	[doc]		Alphabetized dig's +options. [RT #35992]

3848.	[bug]		Adjust 'statistics-channels specified but not effective'
			error message to account for JSON support. [RT #36008]

3847.	[bug]		'configure --with-dlz-postgres' failed to fail when
			there is not support available.

3846.	[bug]		"dig +notcp ixfr=<serial>" should result in a UDP
			ixfr query. [RT #35980]

3845.	[placeholder]

3844.	[bug]		Use the x64 version of the Microsoft Visual C++
			Redistributable when built for 64 bit Windows.
			[RT #35973]

3843.	[protocol]	Check EDNS EXPIRE option in dns_rdata_fromwire.
			[RT #35969]

3842.	[bug]		Adjust RRL log-only logging category. [RT #35945]

3841.	[cleanup]	Refactor zone.c:add_opt to use dns_message_buildopt.
			[RT #35924]

3840.	[port]		Check for arc4random_addrandom() before using it;
			it's been removed from OpenBSD 5.5. [RT #35907]

3839.	[test]		Use only posix-compatible shell in system tests.
			[RT #35625]
